[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2009???? - 1.22.95

[!] * Reorganize directory structure to match current state of things.
[-] * Completely switch DBI driver to utf-8.
[-] * Fixed date by 1900 off error in some cases.
[-] * Cleanup a bit phoned driver.
[-] * Handle properly requests for network code (bug #819).
    
20090209 - 1.22.94

[-] * Fix some memory leaks found by cppcheck.
[-] * Implemented reconnecting/retrying in DBI driver.
[-] * Fix memory leaks in SMSD found by valgrind.
[-] * Fix decoding of another Nokia message type.
[-] * Support for passing received message ID in DBI.
[-] * Dummy phone now supports phonebook, calendar, todo, filesystem.
[-] * Experimental SMSD monitor support on Windows.
[-] * Added ID for Nokia 2680 (bug #813).
[-] * Number of retries of message send in SMSD can be configured.
[-] * Updated SQL files to new version (mostly added useful indexes).
[-] * Dropped own logic for generating IDs for SMS and rely on SQL
      server (only in DBI driver for now).

20090202 - 1.22.93

[-] * Fixed privileges dropping in SMSD.
[-] * SMSD inject now properly uses PhoneID.
[-] * Improve SMSD documentation.
[-] * Translations improvements.
[-] * Add ID for Nokia 7373.
[-] * Do not try to use filesystem OBEX if IrMC access was forced.
[-] * Fix possible crash in LMB decoder.
[-] * Avoid string length overflow in Nokia phonebook encoder.
[-] * Introduced backward compatibility of gammu.StateMachine.SetConfig.
[-] * Experimental dku-2 userspace driver using libusb-1.0 (fbususb).
[+] * python-gammu can now inject messages into SMSD (gammu.SMSD object).
[+] * SMSD stores summary counts of sent/received messages in database.
[+] * Added gammu-smsd-monitor program to monitor state of SMSD.
[+] * python-gammu can now monitor SMSD state.
[-] * Do not try to use OBEX 1.0 it's too old (bug #807).
[-] * Better parse ATI replies from Samsung (bug #806).