@@ -22,6 +22,7 @@ ChangeLog
 [-] * Fixed date by 1900 off error in some cases.
 [-] * Cleanup a bit phoned driver.
 [-] * Handle properly requests for network code (bug #819).
+[-] * Allow to enter more security codes through SMSD (bug #819).
     
 20090209 - 1.22.94
 
